--- a/Milestone/Milestone.vcxproj.filters
+++ b/Milestone/Milestone.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClCompile Include="task.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="item.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="order.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="util.h">
@@ -31,5 +37,13 @@
     <None Include="FishTankTasks.dat">
       <Filter>Source Files</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="ItemList.dat">
+      <Filter>Source Files</Filter>
+    </Text>
+    <Text Include="CustomerOrders.dat">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
