--- a/Milestone/Milestone.vcxproj
+++ b/Milestone/Milestone.vcxproj
@@ -19,12 +19,22 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="i-test.cpp" />
+    <ClCompile Include="i.cpp" />
+    <ClCompile Include="iot.cpp" />
     <ClCompile Include="item.cpp" />
+    <ClCompile Include="o-test.cpp" />
+    <ClCompile Include="o.cpp" />
     <ClCompile Include="order.cpp" />
+    <ClCompile Include="t-test.cpp" />
+    <ClCompile Include="t.cpp" />
     <ClCompile Include="task.cpp" />
     <ClCompile Include="util.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="i.h" />
+    <ClInclude Include="o.h" />
+    <ClInclude Include="t.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
