--- a/Milestone/Milestone.vcxproj.filters
+++ b/Milestone/Milestone.vcxproj.filters
@@ -27,9 +27,39 @@
     <ClCompile Include="order.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="t.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="t-test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="i.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="i-test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="o.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="o-test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="iot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="util.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="t.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="i.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="o.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
