--- a/Milestone/Milestone.vcxproj.filters
+++ b/Milestone/Milestone.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClCompile Include="iot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="factory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="machine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="util.h">
@@ -60,6 +66,12 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="o.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="machine.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Job.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
