--- a/Milestone/Milestone.vcxproj
+++ b/Milestone/Milestone.vcxproj
@@ -19,14 +19,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="factory.cpp" />
     <ClCompile Include="i.cpp" />
     <ClCompile Include="iot.cpp" />
+    <ClCompile Include="machine.cpp" />
     <ClCompile Include="o.cpp" />
     <ClCompile Include="t.cpp" />
     <ClCompile Include="util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="i.h" />
+    <ClInclude Include="Job.h" />
+    <ClInclude Include="machine.h" />
     <ClInclude Include="o.h" />
     <ClInclude Include="t.h" />
     <ClInclude Include="util.h" />
