--- a/Milestone/Milestone.vcxproj
+++ b/Milestone/Milestone.vcxproj
@@ -22,14 +22,13 @@
     <ClCompile Include="factory.cpp" />
     <ClCompile Include="i.cpp" />
     <ClCompile Include="iot.cpp" />
-    <ClCompile Include="machine.cpp" />
     <ClCompile Include="o.cpp" />
     <ClCompile Include="t.cpp" />
     <ClCompile Include="util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="i.h" />
-    <ClInclude Include="Job.h" />
+    <ClInclude Include="job.h" />
     <ClInclude Include="machine.h" />
     <ClInclude Include="o.h" />
     <ClInclude Include="t.h" />
